# ldapr

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  cleanup  configure  configure.ac
R/: RcppExports.R  bind.R  init.R  ldap.R  ldapr.R  print.R  search.R  utils.R  zzz.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml
docs/news/: index.html
docs/reference/: index.html  ldap.html  ldapr-package.html  ldapr_init.html  ldapr_is_ldap_url.html  ldapr_url_parse.html
man/: ldap.Rd  ldap_bind.Rd  ldap_reset.Rd  ldapr-package.Rd  ldapr_init.Rd  ldapr_is_ldap_url.Rd  ldapr_url_parse.Rd
src/: Makevars  RcppExports.cpp  ladp_init.cpp  ldap_bind_s.cpp  ldap_is_url.cpp  ldapr.h  ldapr_search.cpp  ldapr_unbind.cpp  ldapr_url_parse.cpp
tests/: testthat.R
tests/testthat/: test-bind.R  test-init.R  test-search.R
